# generator_for_esp32_mqtt

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.json  config.txt  example.ino  main  main.cpp  main2.cpp  smart_house_mqtt.ino  start_of_code.txt
code_parts/: config.json  function.txt
